2023-10-07T00:58:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6437961034 # 1243
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-07
* notice: last 14d: unq all: 4 4158
* notice: prev accum: outdated-unq outdated-all / unq all: 1726 163153 / 1764 167568
* notice: next accum: outdated-unq outdated-all / unq all: 1728 163453 / 1764 167661
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -50 / +2 +299 -0 -0 / 2 299
* notice: removed / changed dates: [2023-09-22] / [2023-09-23 2023-10-06]

2023-10-06T16:17:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6434039845 # 1242
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-06
* notice: last 14d: unq all: 4 4156
* notice: prev accum: outdated-unq outdated-all / unq all: 1726 163153 / 1764 167474
* notice: next accum: outdated-unq outdated-all / unq all: 1726 163153 / 1764 167568
* notice: prev exec diff / last date diff / accum: unq all: +0 +94 -0 -92 / +2 +206 -0 -0 / 2 206
* notice: removed / changed dates: [] / [2023-09-22 2023-10-06]

2023-10-06T08:17:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6429195659 # 1241
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-06
* notice: last 14d: unq all: 4 4154
* notice: prev accum: outdated-unq outdated-all / unq all: 1726 163153 / 1762 167362
* notice: next accum: outdated-unq outdated-all / unq all: 1726 163153 / 1764 167474
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -120 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2023-09-22 2023-10-06]

2023-10-06T00:59:10Z: