@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-10-07T00:58:19Z",
+  "timestamp" : "2023-10-07T08:15:11Z",
   "count_outdated" : 163453,
   "uniques_outdated" : 1728,
-  "count" : 167661,
-  "uniques" : 1764,
+  "count" : 167772,
+  "uniques" : 1765,
   "clones" : [
     {
       "timestamp": "2023-09-23T00:00:00Z",
-      "count": 251,
+      "count": 134,
       "count_minmax": [ 112, 301 ],
-      "count_decinc": [ 50, 301 ],
+      "count_decinc": [ 167, 301 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -130,6 +130,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-10-07T00:00:00Z",
+      "count": 111,
+      "count_minmax": [ 111, 111 ],
+      "count_decinc": [ 0, 111 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
