@@ -1,10 +1,10 @@
 {
-  "count": 4158,
+  "count": 4152,
   "uniques": 4,
   "clones": [
     {
       "timestamp": "2023-09-23T00:00:00Z",
-      "count": 251,
+      "count": 134,
       "uniques": 2
     },
     {
@@ -71,6 +71,11 @@
       "timestamp": "2023-10-06T00:00:00Z",
       "count": 299,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-10-07T00:00:00Z",
+      "count": 111,
+      "uniques": 1
     }
   ]
 }
