@@ -1,3 +1,12 @@
+2023-10-07T08:15:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6440017475 # 1244
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-07
+* notice: last 14d: unq all: 4 4152
+* notice: prev accum: outdated-unq outdated-all / unq all: 1728 163453 / 1764 167661
+* notice: next accum: outdated-unq outdated-all / unq all: 1728 163453 / 1765 167772
+* notice: prev exec diff / last date diff / accum: unq all: +1 +111 -0 -117 / +1 +111 -0 -0 / 1 111
+* notice: removed / changed dates: [] / [2023-09-23 2023-10-07]
+
 2023-10-07T00:58:19Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6437961034 # 1243
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-07
